--- a/assets/main.css
+++ b/assets/main.css
@@ -5,3 +5,37 @@
 body {
     background-color: #1e293b;
 }
+
+@media (max-width: 768px) { 
+    .section {
+        width: 100%;
+        margin-right: 2em;
+
+    }
+    .heading p {
+        width: 80%;
+        padding-left: 0.5em;
+    }
+    .header {
+        padding-left: 0.2em;
+    }
+    .image {
+        width: 100%;
+        padding: 1em;
+    }
+    .paragraph {
+        width: 80%;
+        padding-left: 1.5em;
+    }
+    .heading {
+        padding-left: 1.2em;
+    }
+    .form {
+        margin: 1.4em;
+    }
+    .form-detail {
+        width: 80%;
+        padding-top: 1.5em;
+    }
+    
+ }
