--- a/assets/main.css
+++ b/assets/main.css
@@ -37,5 +37,14 @@ body {
         width: 80%;
         padding-top: 1.5em;
     }
-    
+    .mobile {
+        justify-content: center;
+        text-align: center;
+    }
+    .transaction {
+        padding-top: 2em;
+    }
+    .box {
+        width: 100%;
+    }
  }
